try to fix upload avatar on iphone

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -276,9 +276,9 @@
     width: 100%;
     height: 100%;
     opacity: 0;
+    display: none;
     overflow: hidden;
     position: absolute;
-    z-index: -1;
     padding: 0 0;
 }
 
